--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -195,7 +195,8 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	\toprule
 	\itshape Mov. & \itshape Bar & \itshape Staff & \itshape Note \\
 	\midrule \endhead
-	
+	1 & 52–58 & – & These bars have been later inserted and lack any articulation. The expressive marks shown have been added by the editor, based on the following bars. \\
+	  & 91  & S   & 1st quarter in Ms: f′4 \\
 	\bottomrule
 \end{longtable}
 
