--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -198,6 +198,7 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	1 & 52–58 & –  & These bars have been later inserted and lack any articulation. The expressive marks shown have been added by the editor, based on the following bars. \\
 	  & 91  & S    & 1st quarter in Ms: f′4 \\
 	2 & 94  & vl 1 & 1st quarter in Ms: g″4 \\
+	3 & 159 & vl 2 & 1st half of bar in Ms: f′4–f′4 \\
 	\bottomrule
 \end{longtable}
 
