--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -195,10 +195,11 @@ In general, this edition closely follows the manuscript. Any changes that were i
 	\toprule
 	\itshape Mov. & \itshape Bar & \itshape Staff & \itshape Note \\
 	\midrule \endhead
-	1 & 52–58 & –  & These bars have been later inserted and lack any articulation. The expressive marks shown have been added by the editor, based on the following bars. \\
-	  & 91  & S    & 1st quarter in Ms: f′4 \\
-	2 & 94  & vl 1 & 1st quarter in Ms: g″4 \\
-	3 & 159 & vl 2 & 1st half of bar in Ms: f′4–f′4 \\
+	1 & 52–58  & –  & These bars have been later inserted and lack any articulation. The expressive marks shown have been added by the editor, based on the following bars. \\
+	  & 91     & S    & 1st quarter in Ms: f′4 \\
+	2 & 94     & vl 1 & 1st quarter in Ms: g″4 \\
+	3 & 159    & vl 2 & 1st half of bar in Ms: f′4–f′4 \\
+	6 & 97–102 & –    & This edition shows the revised version of these bars, \newline as given by a sheet that was later added to the Ms. \\
 	\bottomrule
 \end{longtable}
 
